@@ -1,3 +1,9 @@
+CR-2004-01-22-0: Bugfix:    - execd did not signal job
+                            - switched of communication log (as default)
+                              communication log can be activated with
+                              SGE_NGC_DEBUG variable
+                 Changed:   execd
+
 SG-2004-01-22-3: Bugfix:    fixed the counting for running jobs in the qevent
                             client.
                  Changed:   qevent
